css done more properly. ab not wanna waste more of my energy to next move krr gye bnner bnane ko baki jo css h use tiq krte rhenge

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                                    
             </div>
         </header>
+      
         <!-- movies sections -->
-        <div class="movies-cont container" id="movies-cont">
+        <div class="m-cont cont" id="m-cont">
         </div>
         <!-- movies sections end -->
     </div>
