adding anew page home

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
                                    
             </div>
         </header>
-      
+        <!-- Banner section -->
+        <div id="banner" class="banner">
+            <div class="banner_fadeb"></div>
+        </div>
+        <!-- Banner End -->
         <!-- movies sections -->
         <div class="m-cont cont" id="m-cont">
         </div>
