--- a/homepage/home.html
+++ b/homepage/home.html
@@ -46,14 +46,14 @@
         <!-- Main funda -->
         <div class="main-sec">
             <div class="ms-1">
-                <div class="ms1-sub">
+                <div class="ms1-sub1">
                     <div class="sbg-i-c">
                         <img alt="" aria-hidden="true" data-uia="nmhp-card-hero+background+image" src="https://assets.nflxext.com/ffe/siteui/vlv3/d7af077c-af5a-4055-8f9a-740a43588583/95bae10c-9773-4447-af4e-612a244231bd/IN-en-20230717-popsignuptwoweeks-perspective_alpha_website_small.jpg" srcset="https://assets.nflxext.com/ffe/siteui/vlv3/d7af077c-af5a-4055-8f9a-740a43588583/95bae10c-9773-4447-af4e-612a244231bd/IN-en-20230717-popsignuptwoweeks-perspective_alpha_website_small.jpg 1000w, https://assets.nflxext.com/ffe/siteui/vlv3/d7af077c-af5a-4055-8f9a-740a43588583/95bae10c-9773-4447-af4e-612a244231bd/IN-en-20230717-popsignuptwoweeks-perspective_alpha_website_medium.jpg 1500w, https://assets.nflxext.com/ffe/siteui/vlv3/d7af077c-af5a-4055-8f9a-740a43588583/95bae10c-9773-4447-af4e-612a244231bd/IN-en-20230717-popsignuptwoweeks-perspective_alpha_website_large.jpg 1800w" class="sbg-i eae08lb0">
                         <div class=" sbg-i-d e1dsrrlm0" style="background-image:linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);" data-uia="nmhp-card-hero+gradient"></div>
                     </div>
 
                 </div>
-                <div class="r-w-m">
+                <div class="ms1-sub2">
                     <!-- main email area -->
                     <div class="m-eml">
                         <h1>
