yet working on submit button and css

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="ms1-sub2">
                     <!-- main email area -->
-                    <div class="m-eml">
+                    <div class="ms-eml">
                         <h1>
                             Unlimited movies, TV shows and more
                         </h1>
@@ -66,12 +66,18 @@
                                     Ready to watch? Enter your email to create or restart your membership.
                                 </h3>
                                 <div class="em-form">
-                                    <div>
+                                    <div class="em=f1">
                                         <label for="email">Email address</label>
+                                        <div class="em-f2">
+                                            <input autocomplete="email" minlength="5" maxlength="50" type="email" id="0cc083d96be7a" name="email" data-uia="field-email" value="" fdprocessedid="y4feu">
+                                            <div  aria-hidden="true" class="frm-in"></div>
+                                        </div>
+
                                     </div>
+                                    <button role="button" type="submit" class="sumbut">
+                                        "Get Started"
+                                    </button>
                                     <div>
-                                        <input autocomplete="email" minlength="5" maxlength="50" type="email" id="0cc083d96be7a" name="email" data-uia="field-email" value="" fdprocessedid="y4feu">
-                                        <div aria-hidden="true" class="default-ltr-cache-13iz8qp ea3diy32"></div>
                                     </div>
                                 </div>
                             </form>
